--- a/templates/categories/list.phtml
+++ b/templates/categories/list.phtml
@@ -2,6 +2,7 @@
 <div class="container">
     <div class="row">
         <h3>Lista de categorias</h3>
+        <a class="btn btn-primary" href="/create">Cadastrar</a>
         <table class="table">
             <thead>
                 <tr>
