--- a/templates/categories/create.phtml
+++ b/templates/categories/create.phtml
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <h3>Cadastrar Categorias</h3>
-        <form method="post" action="store">
+        <form method="post" action="/categories/store">
             <div class="form-group">
                 <label for="name">Nome:</label>
                 <input type="text" class="form-control" id="name" name="name">
