--- a/templates/posts/edit.phtml
+++ b/templates/posts/edit.phtml
@@ -1,7 +1,8 @@
 <?php include __DIR__ . '/../header.html'; ?>
     <div class="container">
         <div class="row">
-            <h3>Editar Categorias</h3>
+            <h3>Editar Postes</h3>
+
             <form method="post" action="<?= "/posts/edit/{$posts->getId()}/submit" ?>">
                 <div class="form-group">
                     <label for="title">Titulo:</label>
