--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -1,3 +1,34 @@
-<?php include __DIR__.'/header.html'; ?>
+<?php include __DIR__ . '/header.html'; ?>
+    <div class="container">
+        <div class="row">
+            <h2>Noticias:</h2>
+            <div class="col-md-10">
+                <ul class="list-unstyled">
+                    <?php foreach ($posts as $post): ?>
+                        <li>
+                            <div class="jumbotron">
+                                <h1><?= $post->getTitle(); ?></h1>
+                                <p>
+                                    <?= substr($post->getContent(), 0, 20); ?>
+                                </p>
+                                <p>
+                                    <a class="btn btn-primary" href="#" role="option">Leia Mais</a>
+                                </p>
+                            </div>
+                        </li>
+                    <?php endforeach; ?>
 
-<?php include __DIR__.'/footer.html'; ?>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul>
+                    <?php foreach ($categories as $category): ?>
+                        <li class="list-group-item">
+                           <a href="<?= $category->getId(); ?>"> <?= $category->getName(); ?></a>
+                        </li>
+                    <?php endforeach; ?>
+                </ul>
+            </div>
+        </div>
+    </div>
+<?php include __DIR__ . '/footer.html'; ?>
